@@ -83,8 +83,7 @@ static	cvar_t	scr_showturtle = {"showturtle", "0", CVAR_NONE};
 static	cvar_t	scr_showpause = {"showpause", "1", CVAR_NONE};
 static	cvar_t	scr_showfps = {"showfps", "0", CVAR_NONE};
 
-static qboolean	scr_drawloading;
-static int	ls_offset;
+static int	scr_drawloading;
 static float	scr_disabled_time;
 int		total_loading_size, current_loading_size, loading_stage;
 qboolean	scr_disabled_for_loading;
@@ -568,41 +567,39 @@ SCR_DrawLoading
 */
 void SCR_DrawLoading (void)
 {
-	int	size, count;
+	static int	ls_offset;
+	int		size, count;
 	qpic_t	*pic;
 
-	if (!scr_drawloading && loading_stage == 0)
-		return;
-
-	pic = Draw_CachePic ("gfx/menu/loading.lmp");
-	ls_offset = (vid.width - pic->width) / 2;
-	Draw_TransPic (ls_offset, 0, pic);
+	if (scr_drawloading & 2)
+	{
+		scr_drawloading &= ~2;
+		pic = Draw_CachePic ("gfx/menu/loading.lmp");
+		ls_offset = (vid.width - pic->width) / 2;
+		Draw_TransPic (ls_offset, 0, pic);
+		ls_offset += 42;
+	}
 
 	if (loading_stage == 0)
 		return;
 
-	if (total_loading_size)
-		size = current_loading_size * 106 / total_loading_size;
-	else
-		size = 0;
+	size = (total_loading_size) ?
+		(current_loading_size * 106 / total_loading_size) : 0;
 
-	if (loading_stage == 1)
-		count = size;
-	else
-		count = 106;
-
-	Draw_Fill (ls_offset+42, 87, count, 1, 136);
-	Draw_Fill (ls_offset+42, 87+1, count, 4, 138);
-	Draw_Fill (ls_offset+42, 87+5, count, 1, 136);
-
-	if (loading_stage == 2)
-		count = size;
-	else
-		count = 0;
-
-	Draw_Fill (ls_offset+42, 97, count, 1, 168);
-	Draw_Fill (ls_offset+42, 97+1, count, 4, 170);
-	Draw_Fill (ls_offset+42, 97+5, count, 1, 168);
+	count = (loading_stage == 1) ? size : 106;
+	if (count)
+	{
+		Draw_Fill (ls_offset, 87, count, 1, 136);
+		Draw_Fill (ls_offset, 87+1, count, 4, 138);
+		Draw_Fill (ls_offset, 87+5, count, 1, 136);
+	}
+	count = (loading_stage == 2) ? size : 0;
+	if (count)
+	{
+		Draw_Fill (ls_offset, 97, count, 1, 168);
+		Draw_Fill (ls_offset, 97+1, count, 4, 170);
+		Draw_Fill (ls_offset, 97+5, count, 1, 168);
+	}
 }
 
 /*
@@ -625,11 +622,10 @@ void SCR_BeginLoadingPlaque (void)
 	scr_centertime_off = 0;
 	scr_con_current = 0;
 
-	scr_drawloading = true;
+	scr_drawloading = 1;
 	scr_fullupdate = 0;
 	Sbar_Changed();
 	SCR_UpdateScreen ();
-	scr_drawloading = false;
 
 	scr_disabled_for_loading = true;
 	scr_disabled_time = realtime;
@@ -646,6 +642,7 @@ void SCR_EndLoadingPlaque (void)
 {
 	scr_disabled_for_loading = false;
 	scr_fullupdate = 0;
+	scr_drawloading = 0;
 	Con_ClearNotify ();
 }
 
@@ -661,7 +658,7 @@ static void SCR_SetUpToDrawConsole (void)
 {
 	Con_CheckResize ();
 
-	if (scr_drawloading)
+	if (scr_drawloading & 1)
 		return;		// never a console with loading plaque
 
 // decide on the height of the console
@@ -1214,6 +1211,7 @@ void SCR_UpdateScreen (void)
 	 */
 		if (realtime - scr_disabled_time > 20)
 		{
+			scr_drawloading = 0;
 			scr_disabled_for_loading = false;
 			total_loading_size = 0;
 			loading_stage = 0;
@@ -1229,6 +1227,7 @@ void SCR_UpdateScreen (void)
 	if (!scr_initialized || !con_initialized)
 		return;		// not initialized yet
 
+	scr_drawloading |= 2;
 	GL_BeginRendering (&glx, &gly, &glwidth, &glheight);
 
 //
@@ -1274,7 +1273,7 @@ void SCR_UpdateScreen (void)
 			M_Draw();
 		}
 
-		if (scr_drawloading)
+		if (scr_drawloading & 1)
 			SCR_DrawLoading();
 	}
 /*	else if (cl.intermission == 2 && key_dest == key_game)
@@ -1283,7 +1282,7 @@ void SCR_UpdateScreen (void)
 		SCR_CheckDrawCenterString();
 	}
 */
-	else if (scr_drawloading)
+	else if (scr_drawloading & 1)
 	{
 	//	Sbar_Draw();
 		Draw_FadeScreen ();
